# NanoMatch

./: .gitignore  CMakeLists.txt  README.md  generate_data.py
bench/: bench_baseline.cpp  bench_comparison.cpp  bench_latencies.cpp  bench_optimized.cpp
profiling_evidence/: baseline.sample  optimized.sample
src/: csv_parser.h  fixed_ring_buffer.h  itch_parser.cpp  itch_parser.h  matching_engine.cpp  order.h  order_book.cpp  order_book.h  performance_timer.h  stl_order_book.h  trade_logger.h
